@@ -125,7 +125,7 @@
             <h1>
                 Take part in 240 years of passion for quality and beauty
             </h1>
-            <div class="history flexslider">
+            <div class="history">
                 <ul class="years">
                     <li>
                         <a href="#">
@@ -151,87 +151,65 @@
                         </a>
                     </li>
                 </ul>
-                <ul class="slides">
-                    <li>
-                        <h2>
-                            Once upon a time there was a queen
-                        </h2>
-                        <article class="product">
+                <div class="flexslider">
+                    <ul class="slides">
+                        <li>
                             <div class="elm-image">
-                                <img src="http://lorempixel.com/360/265/abstract/1/" alt="" />
+                                <img src="http://lorempixel.com/360/265/abstract/1/" alt="Once upon a time there was a queen" />
                             </div>
                             <div class="elm-content">
-                                <h3>
-                                    <span class="product-series"></span>
-                                    <br>
-                                    <span class="product-name"></span>
-                                </h3>
-                                <p class="product-details">
+                                <h2>
+                                    Once upon a time there was a queen
+                                </h2>
+                                <p>
+                                    It sounds like the beginning of a fairy tale; yet so begins the story of how porcelain came to Copenhagen, how it became royal, and how the patronage of a Queen in 1775 launched 240 years of passion for extraordinary quality and design that lives happily ever after ...
                                 </p>
                             </div>
-                        </article>
-                    </li>
-                    <li>
-                        <h2>
-                            <span class="year">1775</span>
-                            Born of blue blood
-                        </h2>
-                        <article class="product">
+                        </li>
+                        <li>
                             <div class="elm-image">
-                                <img src="http://lorempixel.com/360/265/abstract/2/" alt="" />
+                                <img src="http://lorempixel.com/360/265/abstract/2/" alt="Born of blue blood" />
                             </div>
                             <div class="elm-content">
-                                <h3>
-                                    <span class="product-series"></span>
-                                    <br>
-                                    <span class="product-name"></span>
-                                </h3>
-                                <p class="product-details">
+                                <h3 class="year">1775</h3>
+                                <h2>
+                                    Born of blue blood
+                                </h2>
+                                <p>
+                                    From the very beginning, Queen Juliane Marie insists that the porcelain from the new royal factory is marked with a unique national symbol: The three waves symbolising the waters of Denmark, the Great Belt, Little Belt and the Sound. The hand-painted waves still adorn every piece - always blue, of course.
                                 </p>
                             </div>
-                        </article>
-                    </li>
-                    <li>
-                        <h2>
-                            <span class="year">1779</span>
-                            What&#x27;s in a name
-                        </h2>
-                        <article class="product">
+                        </li>
+                        <li>
                             <div class="elm-image">
-                                <img src="http://lorempixel.com/360/265/abstract/3/" alt="" />
+                                <img src="http://lorempixel.com/360/265/abstract/3/" alt="What&#x27;s in a name" />
                             </div>
                             <div class="elm-content">
-                                <h3>
-                                    <span class="product-series"></span>
-                                    <br>
-                                    <span class="product-name"></span>
-                                </h3>
-                                <p class="product-details">
+                                <h3 class="year">1779</h3>
+                                <h2>
+                                    What&#x27;s in a name
+                                </h2>
+                                <p>
+                                    The Royal Chartered Porcelain Factory changes its name and becomes The Royal Danish Porcelain Factory.
                                 </p>
                             </div>
-                        </article>
-                    </li>
-                    <li>
-                        <h2>
-                            <span class="year">1868</span>
-                            A feminine touch
-                        </h2>
-                        <article class="product">
+                        </li>
+                        <li>
                             <div class="elm-image">
-                                <img src="http://lorempixel.com/360/265/abstract/4/" alt="" />
+                                <img src="http://lorempixel.com/360/265/abstract/4/" alt="A feminine touch" />
                             </div>
                             <div class="elm-content">
-                                <h3>
-                                    <span class="product-series"></span>
-                                    <br>
-                                    <span class="product-name"></span>
-                                </h3>
-                                <p class="product-details">
+                                <h3 class="year">1868</h3>
+                                <h2>
+                                    A feminine touch
+                                </h2>
+                                <p>
+                                    The first female blue painter is employed a the now privatised Royal Danish Porcelain Factory. This begins a long tradition of strong female artists in Royal Copenhagen, as blue-painting gradually becomes women&#x27;s work.
                                 </p>
                             </div>
-                        </article>
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section id="inspiration" class="content-section section-inspiration">
